--- a/flat_w188_h32_wc_v1.css
+++ b/flat_w188_h32_wc_v1.css
@@ -24,7 +24,12 @@
 }
 
 .plugin #providers {
+	float: left;
 	position: relative;
+}
+
+.plugin #providers .providers_group {
+	float: left;
 }
 
 .plugin #providers .providers_group.hidden {
@@ -51,7 +56,7 @@
 	min-height: 100%;
 	cursor: pointer;
 	position: absolute;
-	width: 200px;
+	width: 20px;
 	bottom: 0;
 	top: 0;
 }
@@ -120,7 +125,7 @@
 	height: 32px;
 	line-height: 32px;
 	padding: 0 0 0 35px;
-	text-align: center;
+	text-align: left;
 	text-decoration: none;
 	width: 143px;
 	background-position: -500px -500px;
